# repo-explainer

./: .claude.md  .gitignore  ANOTHERTEST.MD  BUGFIX_SERVER.md  CHANGELOG.md  EXAMPLE_HTML_OUTPUT.md  HTML_FEATURE_SUMMARY.md  HTML_USER_GUIDE.md  MULTI_AGENT_DOCUMENTATION.md  MULTI_REPO_IMPROVEMENTS.md  ONE_COMMAND_HTML.md  ORCHESTRATION.md  README.md  REQUIREMENTS.md  TEST_README.md  TeamPlayBook.MD  VALIDATION.md  coherence.md  components.json  dataflow.mermaid  docs.md  improve_prompts.md  kubernetes.log.txt  main.py  multi-agent.md  pyproject.toml  render.sh  requirements-dev.txt  requirements.txt  specs.md  tech-stack.txt  test_cli.sh  validate_coherence.py
.opencode/agent/: docs-writer.md
.opencode/commands/: analyze-architecture.md  deep-scan.md  quick-scan.md  standard-scan.md
assets/: agent_architecture.mmd
diagrams/: README.md
diagrams/stage_1/: backend.mmd  tui.mmd
diagrams/stage_2/: backend.mmd  tui.mmd
diagrams/stage_3/: backend.mmd  tui.mmd
diagrams/stage_4/: backend.mmd  tui.mmd
diagrams/stage_5/: backend.mmd  tui.mmd
example-opencode-md/: index.md
example-opencode-md/.repo-explainer/: coherence.json
example-opencode-md/api/: analyze.md  overview.md  update.md
example-opencode-md/components/: cli.md  doc-composer.md  opencode-service.md  output-manager.md  overview.md  repository-loader.md
example-opencode-md/dataflow/: overview.md
example-opencode-md/dependencies/: downstream.md  external.md  overview.md  upstream.md
example-opencode-md/html/: index.html
example-opencode-md/src/: ANALYSIS_SUMMARY.md  analysis_standard.json
example-opencode-md/tech-stack/: overview.md
fastapi-docs/: analysis_9d8dab3f.md  index.md
fastapi-docs/architecture/: architecture.md  overview.md
fastapi-docs/metadata/: analysis-log.json
fastapi-second/: analysis_98cea186.md  index.md
fastapi-second/architecture/: architecture.md  overview.md
fastapi-second/metadata/: analysis-log.json
fastapi-third/: analysis_3b8d30b2.md  index.md
fastapi-third/architecture/: architecture.md  overview.md
kubernetes-docs/: 404.html  index.html  index.md  overview.html
kubernetes-docs-full/: 404.html  index.html
kubernetes-docs-v2/: index.md
kubernetes-exhaustive/: index.md
mydocs/: index.md
nodeexplain/: analysis_41c823de.md  index.md
opencode/: analysis_6eb48a92.md  index.md
prompts/: IMPLEMENTATION_SUMMARY.md  README.md
src/: README.md  __init__.py  document_repo.py
src-v3/: README.md  document_repo.py  output.txt
src-v3/core/: tui.py  (+4 more)
stages/: stage_1.md  stage_2.md  stage_3.md  stage_4.md  stage_5.md
test-1/: index.md
test-docs/: analysis_fa6222f2.md  index.md
work/: dependency-graph.md  index.md  render-diagrams.py  task-breakdown.md  visualizations.md  work-order-report.md
(+299 files in other folders)
