[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-explainer"
version = "0.1.0"
description = "Analyze repositories and generate structured documentation using AI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Saad Khalid" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    "GitPython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
repo-explain = "repo_explainer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_explainer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
